# bezier_toy

./: generate_bezier.py  poetry.toml  pyproject.toml  readme.org
